Fixed truncation

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -45,36 +45,6 @@
   height: auto;
 }
 
-.listItemTitle {
-  color: #252424 100%;
-  opacity: 100%;
-  font-size: 14px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  margin-right: 20px;
-  text-overflow: ellipsis;
-  width: 180px;
-}
-
-.listItemSubtitle {
-  color: #252424 75%;
-  opacity: 100%;
-  font-size: 14px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  
-}
-
-.listItemDescription {
-  color: #252424 75%;
-  opacity: 100%;
-  font-size: 14px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  margin-right: 20px;
-}
-
 .listItem {
   opacity: 100%;
   margin: 2px 2px 0 0;
